--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/octane": "^2.3",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "matanyadaev/   ": "^4.1"
+        "laravel/vapor-cli": "^1.64",
+        "laravel/vapor-core": "^2.37",
+        "matanyadaev/laravel-eloquent-spatial": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
