--- a/package.json
+++ b/package.json
@@ -10,5 +10,16 @@
         "chokidar": "^3.6.0",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/react": "^1.0.16",
+        "@vitejs/plugin-react": "^4.2.1",
+        "@zendeskgarden/react-buttons": "^8.76.2",
+        "@zendeskgarden/react-tables": "^8.76.2",
+        "@zendeskgarden/react-theming": "^8.76.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
