--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "auth0/login": "^7.8",
         "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^1.1",
+        "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
+        "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.4",
         "matanyadaev/laravel-eloquent-spatial": "^4.1",
-        "tightenco/ziggy": "^2.2"
+        "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
