--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.4",
         "matanyadaev/laravel-eloquent-spatial": "^4.1",
+        "symfony/http-client": "^7.2",
+        "symfony/mailgun-mailer": "^7.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
