--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8.2",
         "alexpechkarev/google-maps": "^12.1",
+        "auth0/auth0-php": "^8.13",
+        "auth0/login": "^7.8",
         "davidvandertuijn/laravel-google-maps": "^1.0",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
